# URL-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts  vite-env.d.ts
src/: config.py  database.py  main.py
src/bot/: bot.py  notifications.py  utils.py
src/live_checker/: exceptions.py  models.py  routers.py  schemas.py  services.py  utils.py  worker.py
src/telegram_auth/: dependencies.py  exceptions.py  models.py  redis.py  routers.py  schemas.py  services.py  token.py  utils.py
tests/: conftest.py  test_api.py  test_live_checker_utils.py  test_services.py  test_telegram_auth_utils.py  test_token.py
